Bug-fix of homepage and AOS. Add overflow-x to salsa,bachata,zouk intro

--- a/bodt/static/css/bodt.scss
+++ b/bodt/static/css/bodt.scss
@@ -222,7 +222,8 @@ hr {
   display: flex;
   //justify-content: center;
   flex: 1;
-  width: 100vh;
+  //width: 100vh;
+  width: 100%;
   flex-direction: column-reverse;
 }
 
